--- a/UI Design/Prototypes/Prototype_2/Prototype_2/MainWindow.xaml
+++ b/UI Design/Prototypes/Prototype_2/Prototype_2/MainWindow.xaml
@@ -2,9 +2,12 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="Prototype_2.MainWindow"
-        Title="MainWindow"
+        Title="Pion"
         Height="214"
-        Width="768">
+        Width="768"
+        Closing="OnClose"
+        StateChanged="OnStateChanged"
+        IsVisibleChanged="OnIsVisibleChanged">
     <Grid>
         <Button x:Name="ShowSettings"
         	Content="Settings" 
