--- a/UI Design/Prototypes/Prototype_3/Prototype_3/MainWindow.xaml
+++ b/UI Design/Prototypes/Prototype_3/Prototype_3/MainWindow.xaml
@@ -1,27 +1,271 @@
-﻿<Window
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<Window xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="Prototype_3.MainWindow"
+        xmlns:Runner="clr-namespace:Prototype_3"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:Microsoft_Windows_Themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero"
+        mc:Ignorable="d"
+        x:Class="Prototype_3.MainWindow"
         Title="Pion"
         Height="214"
         Width="768"
         Closing="OnClose"
         StateChanged="OnStateChanged"
         IsVisibleChanged="OnIsVisibleChanged">
+    <Window.Resources>
+        <Runner:ProgressToAngleConverter x:Key="ProgressConverter" />
+
+        <LinearGradientBrush x:Key="ProgressBarBackground"
+                             EndPoint="1,0"
+                             StartPoint="0,0">
+            <GradientStop Color="#BABABA"
+                          Offset="0" />
+            <GradientStop Color="#C7C7C7"
+                          Offset="0.5" />
+            <GradientStop Color="#BABABA"
+                          Offset="1" />
+        </LinearGradientBrush>
+        <LinearGradientBrush x:Key="ProgressBarBorderBrush"
+                             EndPoint="0,1"
+                             StartPoint="0,0">
+            <GradientStop Color="#B2B2B2"
+                          Offset="0" />
+            <GradientStop Color="#8C8C8C"
+                          Offset="1" />
+        </LinearGradientBrush>
+        <LinearGradientBrush x:Key="ProgressBarGlassyHighlight"
+                             EndPoint="0,1"
+                             StartPoint="0,0">
+            <GradientStop Color="#50FFFFFF"
+                          Offset="0.5385" />
+            <GradientStop Color="#00FFFFFF"
+                          Offset="0.5385" />
+        </LinearGradientBrush>
+        <LinearGradientBrush x:Key="ProgressBarTopHighlight"
+                             EndPoint="0,1"
+                             StartPoint="0,0">
+            <GradientStop Color="#80FFFFFF"
+                          Offset="0.05" />
+            <GradientStop Color="#00FFFFFF"
+                          Offset="0.25" />
+        </LinearGradientBrush>
+        <LinearGradientBrush x:Key="ProgressBarIndicatorAnimatedFill"
+                             EndPoint="1,0"
+                             StartPoint="0,0">
+            <GradientStop Color="#00FFFFFF"
+                          Offset="0" />
+            <GradientStop Color="#60FFFFFF"
+                          Offset="0.4" />
+            <GradientStop Color="#60FFFFFF"
+                          Offset="0.6" />
+            <GradientStop Color="#00FFFFFF"
+                          Offset="1" />
+        </LinearGradientBrush>
+        <LinearGradientBrush x:Key="ProgressBarIndicatorDarkEdgeLeft"
+                             EndPoint="1,0"
+                             StartPoint="0,0">
+            <GradientStop Color="#0C000000"
+                          Offset="0" />
+            <GradientStop Color="#20000000"
+                          Offset="0.3" />
+            <GradientStop Color="#00000000"
+                          Offset="1" />
+        </LinearGradientBrush>
+        <LinearGradientBrush x:Key="ProgressBarIndicatorDarkEdgeRight"
+                             EndPoint="1,0"
+                             StartPoint="0,0">
+            <GradientStop Color="#00000000"
+                          Offset="0" />
+            <GradientStop Color="#20000000"
+                          Offset="0.7" />
+            <GradientStop Color="#0C000000"
+                          Offset="1" />
+        </LinearGradientBrush>
+        <RadialGradientBrush x:Key="ProgressBarIndicatorLightingEffectLeft"
+                             RadiusY="1"
+                             RadiusX="1"
+                             RelativeTransform="1,0,0,1,0.5,0.5">
+            <GradientStop Color="#60FFFFC4"
+                          Offset="0" />
+            <GradientStop Color="#00FFFFC4"
+                          Offset="1" />
+        </RadialGradientBrush>
+        <LinearGradientBrush x:Key="ProgressBarIndicatorLightingEffect"
+                             EndPoint="0,0"
+                             StartPoint="0,1">
+            <GradientStop Color="#60FFFFC4"
+                          Offset="0" />
+            <GradientStop Color="#00FFFFC4"
+                          Offset="1" />
+        </LinearGradientBrush>
+        <RadialGradientBrush x:Key="ProgressBarIndicatorLightingEffectRight"
+                             RadiusY="1"
+                             RadiusX="1"
+                             RelativeTransform="1,0,0,1,-0.5,0.5">
+            <GradientStop Color="#60FFFFC4"
+                          Offset="0" />
+            <GradientStop Color="#00FFFFC4"
+                          Offset="1" />
+        </RadialGradientBrush>
+        <LinearGradientBrush x:Key="ProgressBarIndicatorGlassyHighlight"
+                             EndPoint="0,1"
+                             StartPoint="0,0">
+            <GradientStop Color="#90FFFFFF"
+                          Offset="0.5385" />
+            <GradientStop Color="#00FFFFFF"
+                          Offset="0.5385" />
+        </LinearGradientBrush>
+        <Style x:Key="CircularProgressBar"
+               TargetType="{x:Type ProgressBar}">
+            <Setter Property="Foreground"
+                    Value="#01D328" />
+            <Setter Property="Background"
+                    Value="{StaticResource ProgressBarBackground}" />
+            <Setter Property="BorderBrush"
+                    Value="{StaticResource ProgressBarBorderBrush}" />
+            <Setter Property="BorderThickness"
+                    Value="1" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type ProgressBar}">
+                    	<Grid>     
+                        	
+                    		<Runner:Arc StrokeThickness="5"
+                    			Stroke="{TemplateBinding Background}"
+                    			StartAngle="0"
+                    			EndAngle="359.99999"/>                       
+ 
+                    		<Runner:Arc StrokeThickness="7"
+                    			Margin="-1"
+                    			Stroke="{TemplateBinding BorderBrush}">
+                    			<Runner:Arc.StartAngle>
+                    				<MultiBinding Converter="{StaticResource ProgressConverter}">
+                    					<Binding Path="Minimum"
+                    						RelativeSource="{RelativeSource TemplatedParent}" />
+                    					<Binding Path="."
+                    						RelativeSource="{RelativeSource TemplatedParent}" />
+                    				</MultiBinding>
+                    			</Runner:Arc.StartAngle>
+                    			<Runner:Arc.EndAngle>
+                    				<MultiBinding Converter="{StaticResource ProgressConverter}">
+                    					<Binding Path="Value"
+                    						RelativeSource="{RelativeSource TemplatedParent}" />
+                    					<Binding Path="."
+                    						RelativeSource="{RelativeSource TemplatedParent}" />
+                    				</MultiBinding>
+                    			</Runner:Arc.EndAngle>
+                    		</Runner:Arc>
+							
+							        
+							
+                    		<TextBlock Text="{Binding Value, RelativeSource={RelativeSource TemplatedParent}, StringFormat=\{0:0\}}"
+                    			Foreground="{TemplateBinding Background}"
+                    			VerticalAlignment="Center"
+                    			HorizontalAlignment="Center"
+                    			FontSize="32" />
+                    	</Grid>
+
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    	<Style x:Key="ButtonFocusVisual">
+    		<Setter Property="Control.Template">
+    			<Setter.Value>
+    				<ControlTemplate>
+    					<Rectangle Margin="2" SnapsToDevicePixels="true" Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" StrokeThickness="1" StrokeDashArray="1 2"/>
+    				</ControlTemplate>
+    			</Setter.Value>
+    		</Setter>
+    	</Style>
+    	<LinearGradientBrush x:Key="ButtonNormalBackground" EndPoint="0,1" StartPoint="0,0">
+    		<GradientStop Color="#F3F3F3" Offset="0"/>
+    		<GradientStop Color="#EBEBEB" Offset="0.5"/>
+    		<GradientStop Color="#DDDDDD" Offset="0.5"/>
+    		<GradientStop Color="#CDCDCD" Offset="1"/>
+    	</LinearGradientBrush>
+    	<SolidColorBrush x:Key="ButtonNormalBorder" Color="#FF707070"/>
+    	<Style x:Key="ButtonStyle1" TargetType="{x:Type Button}">
+    		<Setter Property="FocusVisualStyle" Value="{StaticResource ButtonFocusVisual}"/>
+    		<Setter Property="Background" Value="{StaticResource ButtonNormalBackground}"/>
+    		<Setter Property="BorderBrush" Value="{StaticResource ButtonNormalBorder}"/>
+    		<Setter Property="BorderThickness" Value="1"/>
+    		<Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
+    		<Setter Property="HorizontalContentAlignment" Value="Center"/>
+    		<Setter Property="VerticalContentAlignment" Value="Center"/>
+    		<Setter Property="Padding" Value="1"/>
+    		<Setter Property="Template">
+    			<Setter.Value>
+    				<ControlTemplate TargetType="{x:Type Button}">
+    						<TextBlock x:Name="textBlock" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" Text="{TemplateBinding Content}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}">
+    						<VisualStateManager.VisualStateGroups>
+    							<VisualStateGroup x:Name="CommonStates">
+    								<VisualState x:Name="Normal"/>
+    								<VisualState x:Name="MouseOver">
+    									<Storyboard>
+    										<ColorAnimationUsingKeyFrames Storyboard.TargetProperty="(TextElement.Foreground).(SolidColorBrush.Color)" Storyboard.TargetName="textBlock">
+    											<EasingColorKeyFrame KeyTime="0" Value="Black"/>
+    										</ColorAnimationUsingKeyFrames>
+    									</Storyboard>
+    								</VisualState>
+    								<VisualState x:Name="Pressed">
+    									<Storyboard>
+    										<ColorAnimationUsingKeyFrames Storyboard.TargetProperty="(TextElement.Foreground).(SolidColorBrush.Color)" Storyboard.TargetName="textBlock">
+    											<EasingColorKeyFrame KeyTime="0" Value="#FFFF3800"/>
+    										</ColorAnimationUsingKeyFrames>
+    									</Storyboard>
+    								</VisualState>
+    								<VisualState x:Name="Disabled"/>
+    							</VisualStateGroup>
+    						</VisualStateManager.VisualStateGroups>
+    					</TextBlock>
+    			
+    				</ControlTemplate>
+    			</Setter.Value>
+    		</Setter>
+    	</Style>
+    </Window.Resources>
     <Grid>
-    	<Grid.Background>
-    		<LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-    			<GradientStop Color="White" Offset="0"/>
-    			<GradientStop Color="#FFF1EFE1" Offset="1"/>
-    		</LinearGradientBrush>
-    	</Grid.Background>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="0.213*" />
+            <ColumnDefinition Width="0.787*" />
+        </Grid.ColumnDefinitions>
+        <Grid.Background>
+            <LinearGradientBrush EndPoint="0.5,1"
+                                 StartPoint="0.5,0">
+                <GradientStop Color="White"
+                              Offset="0" />
+                <GradientStop Color="#FFF1EFE1"
+                              Offset="1" />
+            </LinearGradientBrush>
+        </Grid.Background>
         <Button x:Name="ShowSettings"
-        	Content="Settings" 
-        	Click="ShowSettings_Click" HorizontalAlignment="Right" Margin="0,0,21,24" VerticalAlignment="Bottom"/>
-        <TextBlock x:Name="Filename"
-        	Text="None" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="170.47,61.436,0,0" FontSize="32" Foreground="#FF00585F" />
-        <Ellipse HorizontalAlignment="Left" Margin="31,34,0,38" Stroke="#FF00585F" Width="112" StrokeThickness="5"/>
-        <TextBlock x:Name="Status"
-        	Text="None" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="48,61.436,0,0" FontSize="32" Foreground="#FF00585F" />
+				Style="{DynamicResource ButtonStyle1}"
+                Content="Settings"
+                Click="ShowSettings_Click"
+                HorizontalAlignment="Right"
+                Margin="0,0,21,24"
+                VerticalAlignment="Bottom"
+                Grid.Column="1" />
+    	<Button x:Name="Filename"
+    		Content="None"
+    		HorizontalAlignment="Left"
+    		VerticalAlignment="Top"
+    		Margin="10.47,61.436,0,0"
+    		FontSize="32"
+    		Foreground="#FF00585F"
+    		Grid.Column="1" Style="{DynamicResource ButtonStyle1}" />
+
+        <ProgressBar Style="{DynamicResource CircularProgressBar}"
+                     Grid.Column="0"
+                     Minimum="0"
+                     x:Name="Status"
+                     Maximum="100"
+                     Background="#FF00585F"
+                     BorderBrush="#FFF0EDBB"
+                     Foreground="{x:Null}"
+                     HorizontalAlignment="Center"
+                     VerticalAlignment="Center" Height="106.76" Width="106.761" />
+
     </Grid>
 </Window>
