--- a/Source/Pion/Pion.UI/App.xaml
+++ b/Source/Pion/Pion.UI/App.xaml
@@ -2,6 +2,17 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Pion.UI.Themes.Guanine;component/Generic.xaml" />
+                <ResourceDictionary Source="/Pion.UI.Themes.Guanine;component/Styles/Grid.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+
+            <!--
+                Workaround for a bug in WPF. Otherwise the theme resource dictionaries won't be loaded.
+                See: http://stackoverflow.com/questions/1229395/trouble-referencing-a-resource-dictionary-that-contains-a-merged-dictionary
+            -->
+            <Style TargetType="{x:Type Rectangle}" />
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
