--- a/Source/Pion/Pion.UI/Views/MainWindow.xaml
+++ b/Source/Pion/Pion.UI/Views/MainWindow.xaml
@@ -1,8 +1,42 @@
 ﻿<Window x:Class="Pion.UI.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow"
+        Height="214"
+        Width="768">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="0.213*" />
+            <ColumnDefinition Width="0.787*" />
+        </Grid.ColumnDefinitions>
         
+        <Button x:Name="ShowSettings"
+                Style="{DynamicResource HyperlinkButtonStyle}"
+                Content="Settings"
+                HorizontalAlignment="Right"
+                Margin="0,0,21,24"
+                VerticalAlignment="Bottom"
+                Grid.Column="1" />
+        
+        <Button x:Name="Filename"
+                Content="None"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Margin="10.47,61.436,0,0"
+                FontSize="32"
+                Grid.Column="1"
+                Style="{DynamicResource HyperlinkButtonStyle}" />
+
+        <ProgressBar Style="{DynamicResource CircularProgressBarStyle}"
+                     Grid.Column="0"
+                     Minimum="0"
+                     x:Name="Status"
+                     Maximum="100"
+                     Foreground="{x:Null}"
+                     HorizontalAlignment="Center"
+                     VerticalAlignment="Center"
+                     Height="106.76"
+                     Width="106.761" />
+
     </Grid>
 </Window>
