--- a/Source/Pion/Pion.UI.Themes.Guanine/Generic.xaml
+++ b/Source/Pion/Pion.UI.Themes.Guanine/Generic.xaml
@@ -7,6 +7,7 @@
         <ResourceDictionary Source="/Pion.UI.Themes.Guanine;component/Styles/Button.xaml" />
         <ResourceDictionary Source="/Pion.UI.Themes.Guanine;component/Styles/Grid.xaml" />
         <ResourceDictionary Source="/Pion.UI.Themes.Guanine;component/Styles/TextBlock.xaml" />
+        <ResourceDictionary Source="/Pion.UI.Themes.Guanine;component/Styles/TextBox.xaml" />
     </ResourceDictionary.MergedDictionaries>
     
 </ResourceDictionary>
